# otpbar

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  icon.icns  index.html  install.sh  package-lock.json  package.json  renderer.js  styles.css  tailwind.config.ts  verify-build.sh
.beads/: issues.jsonl
.github/workflows/: build.yml  release.yml
scripts/: release.js
src/: App.tsx  constants.ts  gmail.ts  index.css  main.ts  main.tsx  parser.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gmail.rs  history.rs  keychain.rs  lib.rs  main.rs  oauth_server.rs  otp.rs  preferences.rs  privacy.rs  types.rs
src-tauri/tests/: oauth_integration_test.rs  otp_extraction_test.rs
src/components/: Auth.tsx  CodeCard.tsx  CodeList.tsx  ErrorBoundary.tsx  PrivacyDashboard.tsx  Settings.tsx
src/lib/: tauri.ts
src/types/: tauri.ts
