[package]
name = "otpbar"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
image = "0.25"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
keyring = "3.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
base64 = "0.22"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
